# ledger-icp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.coverage  README.md  ledger_app.toml  sonar-project.properties
.circleci/: config.yml
.github/workflows/: check_version.yml  codeql.yml.bk  codeql_checks.yml  coverage.yml  ledger.yml  lint.yml  main.yaml  main.yml  publish.yaml  reusable_build.yml  sonarcloud.yml
app/: .gitignore  Makefile  Makefile.rust  Makefile.version  script_x.ld
app/rust/: Cargo.toml  build.rs
app/rust/.cargo/: config.toml
app/rust/include/: rslib.h
app/rust/src/: argument_list.rs  candid_header.rs  candid_types.rs  constants.rs  error.rs  ffi.rs  lib.rs  parser.rs  principal.rs  test_ui.rs  type_table.rs  utils.rs
app/rust/src/ffi/: c_api.rs  call_request.rs  consent_request.rs  context.rs  parser_interface.rs  resources.rs  ui.rs  verify_certificate.rs
app/rust/src/parser/: call_request.rs  candid_utils.rs  certificate.rs  consent_message.rs  delegation.rs  hash_tree.rs  label.rs  pubkey.rs  raw_value.rs  signature.rs  snapshots_common.rs  subnet_id.rs
app/rust/src/parser/call_request/: arg.rs  canister_call.rs  consent_msg_request.rs  icrc21_consent_msg_metadata.rs  icrc21_message_request.rs  icrc21_message_spec.rs  request.rs
app/rust/src/parser/certificate/: canister_ranges.rs  cert.rs  delegation.rs  hash_tree.rs  label.rs  pubkey.rs  raw_value.rs  signature.rs  subnet_id.rs
app/rust/src/parser/consent_message/: buffer_writer.rs  candid_types.rs  msg.rs  msg_error.rs  msg_info.rs  msg_iter.rs  msg_metadata.rs  msg_response.rs
app/rust/src/parser/consent_message/snapshots/: rslib__parser__consent_message__msg_response__msg_response_test__ui.snap  rslib__parser__consent_message__msg_response__msg_response_test__ui.snap.new
app/rust/src/parser/consent_message/testvectors/: ui_data.json
app/src/: addr.c  addr.h  apdu_handler.c  base32.c  base32.h  bls.c  bls.h  coin.h  crypto.c  crypto.h  formatting.c  formatting.h  nvdata.c  nvdata.h  parser.c  parser_impl.c  parser_impl.h  parser_print_candid.c  parser_print_candid.h  parser_print_helper.c  parser_print_helper.h  parser_print_protobuf.c  parser_print_protobuf.h  parser_print_strings.h  parser_txdef.h  secret.c  token_info.c  token_info.h
app/src/c_api/: api.c  c_api.c
app/src/candid/: candid_helper.c  candid_helper.h  candid_parser.c  candid_parser.h  candid_types.h  governance.did  leb128.c  leb128.h  nns_parser.c  nns_parser.h  sns_governance.did  sns_parser.c  (+1 more)
cmake/Hunter/: config.cmake
cmake/conan/: CMakeLists.txt
docs/: APDUSPEC.md
fuzz/: parser_parse.cpp  parser_protobuf.cpp
js/: .eslintrc.json  README.md  package.json  tsconfig.json
js/src/: common.ts  consts.ts  helper.ts  index.ts  types.ts
tests/: addressToString.cpp  candid_parser.cpp  candid_send.json  cbor_parser.cpp  common.cpp  common.h  deprecated.json  disburse-nns-neuron-maturity.json  icpFormatting.cpp  icrc-2.json  icrc.json  manual.json  phase2.json  protobuf_parser.cpp  sns-stake-maturity.json  sns_add_neuron_permission.json  sns_manage_neuron_actions.json  sns_remove_neuron_permission.json  sns_set_dissolve_delay.json  stake_accounts.json  textual_address.sh  textual_decode.sh  token_decimals_info.json  ui_tests.cpp
tests_zemu/: debug.mjs  eslint.config.js  globalsetup.js  jest.config.js  log  package.json  try.mjs  tsconfig.json
tests_zemu/jest/: globalsetup.ts  globalteardown.ts  setup.ts
tests_zemu/tests/: addresses.test.ts  bls.test.ts  bls_test_data.ts  candid.test.ts  common.ts  phase1.test.ts  phase2.test.ts  phase2b.test.ts  protobuf.test.ts  standard.test.ts  test.js  test.ts
tests_zemu/tools/: debug.ts
(+30 files in other folders)
