[package]
authors = ["Zondax AG <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2021"
readme = "README.md"
resolver = "2"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[dependencies]
no-std-compat = { version = "0.4.1" }
bls_signature = { package = "ic-verify-bls-signature", version = "0.3.0", default-features = false }

[dev-dependencies]
no-std-compat = { version = "0.4.1", features = ["std"] }
serde_json = "1.0.56"
hex = { version = "0.4" }
serde-json-core = { version = "0.4.0", features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.9.1", default-features = false }
base64 = { version = "0.13.0" }


[target.'cfg(fuzzing)'.dependencies]
no-std-compat = { version = "0.4.1", features = ["std"] }

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"

[profile.dev]
panic = "abort"
