[package]
authors = ["Zondax AG <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2021"
readme = "README.md"
resolver = "2"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[dependencies]
minicbor = { version = "0.24.2", default-features = false }
no-std-compat = { version = "0.4.1" }
bls_signature = { package = "ic-verify-bls-signature", version = "0.6.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
arrayref = { version = "0.3.7", default-features = false }
nom = { version = "7.1.3", default-features = false }
bolos = { path = "../../deps/ledger-rust/bolos" }
zemu-sys = { path = "../../deps/ledger-rust/zemu" }
cfg-if = "1.0.0"

[dev-dependencies]
no-std-compat = { version = "0.4.1", features = ["std"] }
hex = { version = "0.4" }
minicbor = { version = "0.24.2", features = ["std"] }
ic-certification = { version = "2.5.0", features = ["serde"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
zuit = { path = "../../deps/ledger-rust/zuit" }
insta = { version = "1", features = ["glob"] }
serde = { version = "1.0.215", features = ["derive"] }


[target.'cfg(fuzzing)'.dependencies]
no-std-compat = { version = "0.4.1", features = ["std"] }

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"

[profile.dev]
panic = "abort"

[features]
clippy = []
derive-debug = []
fuzzing = ["derive-debug"]
